# far2l

./: .deepsource.toml  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.fc32  README.md  build.sh  patch-liblzma.patch  shell.nix  toolchain-aarch64.cmake  vcpkg.json
FARStdlib/include/: all_far.h  fstdlib.h  funi.h
FARStdlib/src/: fstd_crc32.cpp
NetRocks/: CMakeLists.txt
NetRocks/configs/plug/: helpe.hlf
NetRocks/src/: PluginPanelItems.cpp
NetRocks/src/Host/: HostLocal.cpp  HostLocal.h  HostRemote.cpp  HostRemote.h  HostRemoteBroker.cpp
NetRocks/src/Op/: OpConnect.cpp
NetRocks/src/Protocol/: DirectoryEnumCache.cpp  FileStatsOverride.cpp  FileStatsOverride.h  Protocol.h
NetRocks/src/Protocol/FTP/: ProtocolFTP.cpp  ProtocolFTP.h
NetRocks/src/Protocol/NFS/: ProtocolNFS.cpp  ProtocolNFS.h
NetRocks/src/Protocol/SHELL/: ProtocolSHELL.h
NetRocks/src/Protocol/SMB/: ProtocolSMB.cpp  ProtocolSMB.h
NetRocks/src/Protocol/SSH/: ProtocolSCP.cpp  ProtocolSCP.h  ProtocolSFTP.cpp  ProtocolSFTP.h  SSHConnection.cpp  SSHConnection.h
NetRocks/src/Protocol/WebDAV/: ProtocolWebDAV.cpp  ProtocolWebDAV.h
NetRocks/src/UI/Activities/: WhatOnError.h
WinPort/: FarTTY.h  WinCompat.h
WinPort/src/: APIStringCodepages.cpp  ConsoleInput.h
WinPort/src/Backend/: SudoAskpassImpl.cpp  WinPortMain.cpp
WinPort/src/Backend/TTY/: TTYBackend.cpp  TTYBackend.h  TTYInputSequenceParser.cpp  TTYInputSequenceParser.h  TTYInputSequenceParserExts.cpp  TTYXGlue.cpp
WinPort/src/Backend/WX/: wxMain.cpp
WinPort/src/sudo/: sudo_client.cpp  sudo_private.h
bash-completion/: CMakeLists.txt
calc/src/shared/mathexpression/: MathExpressionBase.h
calc/src/shared/ttmath/: ttmathuint.h  ttmathuint_x86_64.h
cmake/: CPM.cmake  vcpkg.cmake  vcpkg_utilities.cmake
cmake/modules/: FindLibNEON.cmake  FindLibNfs.cmake
colorer/: CMakeLists.txt
colorer/configs/base/hrc/lib/: far.hrc  regexp.hrc
colorer/configs/base/hrc/rare/ie-weidu/: baf.hrc
colorer/configs/base/hrc/xml/: xpath-xml.ent.hrc
colorer/configs/base/hrd/rgb/: mirice.hrd  mirror.hrd
colorer/src/Colorer-library/src/colorer/: LineSource.h  Scheme.h
colorer/src/Colorer-library/src/colorer/editor/: BaseEditor.cpp  BaseEditor.h  OutlineItem.h
colorer/src/Colorer-library/src/colorer/handlers/: LineRegionsSupport.h
colorer/src/Colorer-library/src/colorer/io/: JARInputSource.h
colorer/src/Colorer-library/src/colorer/parsers/: FileTypeImpl.cpp  HRCParserImpl.cpp  HRCParserImpl.h
colorer/src/Colorer-library/src/colorer/unicode/: String.cpp
colorer/src/Colorer-library/src/colorer/xml/: XmlTagDefs.h
colorer/src/pcolorer2/: FarEditor.h
docker/: Dockerfile  Dockerfile.aarch64-alpine  Dockerfile.alpine  arm64-linux.cmake  docker.sh  entry.sh
editorcomp/src/: Editor.h
far2l/: CMakeLists.txt
far2l/bootstrap/scripts/: FarEng.hlf.m4  FarHun.hlf.m4  FarRus.hlf.m4  FarUkr.hlf.m4
far2l/far2sdk/: fardlgbuilderbase.hpp
far2l/src/: FindPattern.cpp  TPreRedrawFunc.hpp  clipboard.cpp  cmdline.hpp  copy.cpp  copy.hpp  delete.cpp  dialog.cpp  dialog.hpp  dirinfo.cpp  edit.cpp  edit.hpp  editor.cpp  editor.hpp  farwinapi.cpp  fileedit.cpp  filefilterparams.hpp  filepanels.hpp  fileview.hpp  flupdate.cpp  frame.hpp  help.cpp  help.hpp  hilight.cpp  main.cpp  manager.hpp  modal.cpp  modal.hpp  panel.hpp  scantree.hpp  synchro.cpp  treelist.cpp  treelist.hpp  usermenu.cpp  viewer.hpp  vmenu.cpp  vmenu.hpp
far2l/src/base/: DList.hpp
far2l/src/cfg/: ConfigRW.hpp  config.cpp  config.hpp
far2l/src/console/: interf.cpp  keyboard.cpp  scrbuf.cpp  scrbuf.hpp  scrobj.hpp
far2l/src/hist/: history.cpp
far2l/src/locale/: codepage.cpp
far2l/src/macro/: macro.hpp  tvar.hpp
far2l/src/mix/: udlist.hpp
far2l/src/panels/: filelist.cpp  flupdate.cpp  panel.cpp  panel.hpp  treelist.cpp  treelist.hpp
far2l/src/plug/: PluginA.hpp  plclass.hpp  wrap.cpp
far2l/src/vt/: vtlog.cpp  vtshell.cpp
farftp/configs/plug/: FtpEng.hlf
farftp/src/: FtpDlg.cpp
multiarc/: CMakeLists.txt
multiarc/src/: MultiArc.hpp  arcget.cpp
multiarc/src/formats/libarch/: libarch_utils.h
multiarc/src/formats/rar/unrar/: arccmt.cpp  archive.cpp  archive.hpp  arcread.cpp  cmddata.cpp  cmdfilter.cpp  coder.cpp  dll.cpp  extract.cpp  getbits.hpp  hash.cpp  list.cpp  model.cpp  options.hpp  pathfn.cpp  rdwrfn.cpp  recvol3.cpp  scantree.cpp  secpassword.hpp  strfn.cpp  uiconsole.cpp  ulinks.cpp  unicode.cpp  unpack.hpp  unpack15.cpp  unpack50.cpp  volume.cpp
packaging/: CMakeLists.txt
packaging/debian/: CMakeLists.txt
tmppanel/src/: TmpCfg.hpp  TmpPanel.cpp  expname.h
utils/include/: ErrnoSaver.hpp  MatchWildcard.hpp  PipeIPC.h
utils/src/: FSNotify.cpp  InstallPath.cpp  LocalSocket.cpp  TTYRawMode.cpp  utils.cpp
